--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flex_color_scheme: ^8.4.0
   provider: ^6.1.5+1
   get_it: ^9.2.0
+  pinput: ^6.0.1
 
 dev_dependencies:
   flutter_test:
