--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   pinput: ^6.0.1
   flutter_dotenv: ^6.0.0
   http: ^1.6.0
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
